tests/invalid/main_guard_comparator_not_constant_or_str/main.py
def run_case() -> None:
    print("x")


if __name__ == __package__:
    run_case()
